build: adopt Gradle with dual Java Spigot support